--- a/app/src/main/res/layout/channel_element.xml
+++ b/app/src/main/res/layout/channel_element.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/channel_element_layout"
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/channel_element_layout"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
 	android:orientation="vertical">
 
 	<android.support.v7.widget.CardView
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:padding="4dp"
+		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		app:cardCornerRadius="4dp">
 
 		<RelativeLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent">
+			android:layout_height="wrap_content">
 
 			<TextView
 				android:id="@+id/channel_element_tittle_text_view"
@@ -37,10 +36,10 @@
 				android:layout_alignParentEnd="true"
 				android:layout_alignParentRight="true"
 				android:layout_alignParentTop="true"
+				android:contentDescription="channel_image"
 				android:paddingRight="16dp"
 				android:paddingTop="16dp"
-				app:srcCompat="@mipmap/ic_launcher"
-				android:contentDescription="channel_image" />
+				app:srcCompat="@mipmap/ic_launcher" />
 
 			<TextView
 				android:id="@+id/channel_element_subtitle_text_view"
