--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -9,10 +9,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.spitchenko.focusstart.MainActivity">
+    tools:context="com.spitchenko.focusstart.channel_window.ChannelActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/activity_main_recycler_view"/>
+        android:id="@+id/activity_channel_recycler_view"/>
 </RelativeLayout>
