--- a/app/src/main/res/layout/channel_element.xml
+++ b/app/src/main/res/layout/channel_element.xml
@@ -11,7 +11,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		app:cardCornerRadius="4dp">
+		android:id="@+id/channel_element_card_view"
+		app:cardCornerRadius="2dp">
 
 		<RelativeLayout
 			android:layout_width="match_parent"
