--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -1,18 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.spitchenko.focusstart.channel_window.ChannelActivity">
+<RelativeLayout android:id="@+id/activity_channel"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context=".userinterface.channelwindow.ChannelActivity">
+	
+	<android.support.design.widget.AppBarLayout
+		android:id="@+id/activity_channel_app_bar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+		
+		<android.support.v7.widget.Toolbar android:id="@+id/activity_channel_toolbar"
+			xmlns:android="http://schemas.android.com/apk/res/android"
+			xmlns:tools="http://schemas.android.com/tools"
+			android:layout_width="match_parent"
+			android:layout_height="56dp">
+		</android.support.v7.widget.Toolbar>
+	</android.support.design.widget.AppBarLayout>
+	
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/activity_channel_recycler_view"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/activity_channel_app_bar"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true" />
+	
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fab"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentEnd="true"
+		android:layout_alignParentRight="true"
+		android:layout_gravity="bottom|end"
+		android:layout_margin="16dp"
+		app:borderWidth="0dp"
+		app:elevation="6dp"
+		app:backgroundTint="@color/colorPrimary"
+		app:srcCompat="@android:drawable/ic_input_add" />
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_channel_recycler_view"/>
+    <FrameLayout
+        android:id="@+id/activity_channel_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
