--- a/app/src/main/res/layout/channel_element.xml
+++ b/app/src/main/res/layout/channel_element.xml
@@ -37,10 +37,10 @@
 				android:layout_alignParentEnd="true"
 				android:layout_alignParentRight="true"
 				android:layout_alignParentTop="true"
-				android:contentDescription="channel_image"
+				android:contentDescription="@string/channel_image_image_description"
 				android:paddingRight="16dp"
 				android:paddingTop="16dp"
-				app:srcCompat="@mipmap/ic_launcher" />
+				app:srcCompat="@drawable/ic_rss_feed_amber_50_36dp" />
 
 			<TextView
 				android:id="@+id/channel_element_subtitle_text_view"
