--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -1,47 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/activity_channel"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".userinterface.channelwindow.ChannelActivity">
-	
-	<android.support.design.widget.AppBarLayout
-		android:id="@+id/activity_channel_app_bar"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-		
-		<android.support.v7.widget.Toolbar android:id="@+id/activity_channel_toolbar"
-			xmlns:android="http://schemas.android.com/apk/res/android"
-			xmlns:tools="http://schemas.android.com/tools"
-			android:layout_width="match_parent"
-			android:layout_height="56dp">
-		</android.support.v7.widget.Toolbar>
-	</android.support.design.widget.AppBarLayout>
-	
-	<android.support.v7.widget.RecyclerView
-		android:id="@+id/activity_channel_recycler_view"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_below="@+id/activity_channel_app_bar"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true" />
-	
-	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/fab"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentEnd="true"
-		android:layout_alignParentRight="true"
-		android:layout_gravity="bottom|end"
-		android:layout_margin="16dp"
-		app:borderWidth="0dp"
-		app:elevation="6dp"
-		app:backgroundTint="@color/colorPrimary"
-		app:srcCompat="@android:drawable/ic_input_add" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/activity_channel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".userinterface.channelwindow.ChannelActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/activity_channel_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/activity_channel_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_height">
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/activity_channel_swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_below="@id/activity_channel_app_bar"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activity_channel_recycler_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/activity_channel_app_bar"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@android:drawable/ic_input_add"/>
 
     <FrameLayout
         android:id="@+id/activity_channel_container"
