--- a/app/src/main/res/layout/channel_item_element.xml
+++ b/app/src/main/res/layout/channel_item_element.xml
@@ -1,54 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:orientation="vertical"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content">
-	
-	<android.support.v7.widget.CardView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		app:cardCornerRadius="2dp">
-		
-		<RelativeLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-			
-			<TextView
-				android:id="@+id/channel_item_element_tittle_text_view"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:paddingLeft="16dp"
-				android:paddingRight="16dp"
-				android:paddingTop="24dp"
-				android:textSize="24sp"
-				tools:text="WSJ: Обама пришел в ярость из-за обвинений Трампа по поводу прослушки" />
-			
-			<TextView
-				android:id="@+id/channel_item_element_subtitle_text_view"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignParentLeft="true"
-				android:layout_alignParentStart="true"
-				android:layout_below="@+id/channel_item_element_tittle_text_view"
-				android:paddingLeft="16dp"
-				android:paddingRight="16dp"
-				android:textSize="14sp"
-				tools:text="Экс-президент США Барак Обама был разгневан обвинениями действующего американского лидера Дональда Трампа в его адрес по поводу санкционирования прослушивания телефонных разговоров республиканца. Об этом сообщила газетf The Wall Street Journal." />
-			
-			<TextView
-				android:id="@+id/channel_item_element_update_text_view"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_below="@id/channel_item_element_subtitle_text_view"
-				android:paddingLeft="16dp"
-				android:paddingRight="16dp"
-				tools:text="08 Mar 2017 09:12:04 +0300"
-				android:layout_alignParentLeft="true"
-				android:layout_alignParentStart="true" />
-		</RelativeLayout>
-	
-	</android.support.v7.widget.CardView>
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:cardCornerRadius="@dimen/card_corner_radius">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/channel_item_element_update_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/channel_item_element_tittle_text_view"
+                android:paddingLeft="@dimen/padding_card_left"
+                android:paddingRight="@dimen/padding_card_right"
+                android:textSize="@dimen/date_text_size"
+                tools:ignore="RtlHardcoded"
+                tools:text="08 Mar 2017 09:12:04 +0300"/>
+
+            <TextView
+                android:id="@+id/channel_item_element_tittle_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/padding_card_left"
+                android:paddingRight="@dimen/padding_card_right"
+                android:paddingTop="@dimen/padding_card_top"
+                android:textSize="@dimen/title_text_size"
+                tools:ignore="RtlHardcoded"
+                tools:text="WSJ: Обама пришел в ярость из-за обвинений Трампа по поводу прослушки"/>
+
+            <TextView
+                android:id="@+id/channel_item_element_subtitle_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/channel_item_element_update_text_view"
+                android:paddingBottom="@dimen/padding_card_bottom"
+                android:paddingLeft="@dimen/padding_card_left"
+                android:paddingRight="@dimen/padding_card_right"
+                android:textSize="@dimen/subtitle_text_size"
+                tools:ignore="RtlHardcoded"
+                tools:text="Экс-президент США Барак Обама был разгневан обвинениями действующего американского лидера Дональда Трампа в его адрес по поводу санкционирования прослушивания телефонных разговоров республиканца. Об этом сообщила газетf The Wall Street Journal."/>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
