--- a/app/src/main/res/layout/channel_item_element.xml
+++ b/app/src/main/res/layout/channel_item_element.xml
@@ -23,8 +23,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/channel_item_element_tittle_text_view"
-                android:paddingLeft="@dimen/padding_card_left"
-                android:paddingRight="@dimen/padding_card_right"
+                android:layout_marginLeft="@dimen/padding_card_left"
+                android:layout_marginRight="@dimen/padding_card_right"
                 android:textSize="@dimen/date_text_size"
                 tools:ignore="RtlHardcoded"
                 tools:text="08 Mar 2017 09:12:04 +0300"/>
@@ -33,26 +33,27 @@
                 android:id="@+id/channel_item_element_tittle_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/padding_card_left"
-                android:paddingRight="@dimen/padding_card_right"
-                android:paddingTop="@dimen/padding_card_top"
+                android:layout_marginLeft="@dimen/padding_card_left"
+                android:layout_marginRight="@dimen/padding_card_right"
+                android:layout_marginTop="@dimen/padding_card_top"
                 android:textSize="@dimen/title_text_size"
                 tools:ignore="RtlHardcoded"
                 tools:text="WSJ: Обама пришел в ярость из-за обвинений Трампа по поводу прослушки"/>
 
-            <TextView
-                android:id="@+id/channel_item_element_subtitle_text_view"
-                android:layout_width="wrap_content"
+            <WebView
+                android:id="@+id/channel_element_web_view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/channel_item_element_update_text_view"
-                android:paddingBottom="@dimen/padding_card_bottom"
-                android:paddingLeft="@dimen/padding_card_left"
-                android:paddingRight="@dimen/padding_card_right"
+                android:layout_marginLeft="@dimen/padding_card_left"
+                android:layout_marginRight="@dimen/padding_card_right"
+                android:layout_marginBottom="@dimen/padding_card_bottom"
+                android:padding="0dp"
+                tools:text="Экс-президент США Барак Обама был разгневан обвинениями действующего американского лидера Дональда Трампа в его адрес по поводу санкционирования прослушивания телефонных разговоров республиканца. Об этом сообщила газетf The Wall Street Journal."
                 android:textSize="@dimen/subtitle_text_size"
-                tools:ignore="RtlHardcoded"
-                tools:text="Экс-президент США Барак Обама был разгневан обвинениями действующего американского лидера Дональда Трампа в его адрес по поводу санкционирования прослушивания телефонных разговоров республиканца. Об этом сообщила газетf The Wall Street Journal."/>
+                tools:ignore="RtlHardcoded,WebViewLayout"/>
 
         </RelativeLayout>
 
