--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -25,8 +25,8 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/activity_channel_swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_below="@id/activity_channel_app_bar"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/activity_channel_app_bar">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/activity_channel_recycler_view"
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/activity_channel_app_bar"/>
+            android:layout_below="@+id/activity_channel_app_bar"
+            android:scrollbars="vertical"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
