--- a/app/src/main/res/layout/activity_channel_item.xml
+++ b/app/src/main/res/layout/activity_channel_item.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/activity_channel_item_app_bar"/>
+            android:layout_below="@+id/activity_channel_item_app_bar"
+            android:scrollbars="vertical"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
