--- a/app/src/main/res/layout/activity_channel_item.xml
+++ b/app/src/main/res/layout/activity_channel_item.xml
@@ -3,7 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".userinterface.channellitem.ChannelItemActivity">
+                tools:context=".userinterface.channellitemwindow.ChannelItemActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/activity_channel_item_app_bar"
