--- a/app/src/main/res/layout/channel_item_element.xml
+++ b/app/src/main/res/layout/channel_item_element.xml
@@ -14,7 +14,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/channel_item_element_update_text_view"
@@ -47,13 +47,13 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/channel_item_element_update_text_view"
+                android:layout_marginBottom="@dimen/padding_card_bottom"
                 android:layout_marginLeft="@dimen/padding_card_left"
                 android:layout_marginRight="@dimen/padding_card_right"
-                android:layout_marginBottom="@dimen/padding_card_bottom"
                 android:padding="0dp"
-                tools:text="Экс-президент США Барак Обама был разгневан обвинениями действующего американского лидера Дональда Трампа в его адрес по поводу санкционирования прослушивания телефонных разговоров республиканца. Об этом сообщила газетf The Wall Street Journal."
                 android:textSize="@dimen/subtitle_text_size"
-                tools:ignore="RtlHardcoded,WebViewLayout"/>
+                tools:ignore="RtlHardcoded"
+                tools:text="Экс-президент США Барак Обама был разгневан обвинениями действующего американского лидера Дональда Трампа в его адрес по поводу санкционирования прослушивания телефонных разговоров республиканца. Об этом сообщила газетf The Wall Street Journal."/>
 
         </RelativeLayout>
 
