--- a/app/src/main/res/menu/channel_menu.xml
+++ b/app/src/main/res/menu/channel_menu.xml
@@ -5,6 +5,6 @@
 		android:id="@+id/action_settings"
 		android:orderInCategory="100"
         android:icon="@drawable/ic_settings_white_24dp"
-		android:title="@string/action_settings"
+		android:title="@string/settings_activity_title"
 		app:showAsAction="ifRoom" />
 </menu>
