--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,10 @@
     <dimen name="padding_card_left">16dp</dimen>
     <dimen name="padding_card_right">16dp</dimen>
     <dimen name="padding_card_top">24dp</dimen>
+    <dimen name="padding_card_bottom">16dp</dimen>
     <dimen name="title_text_size">24sp</dimen>
     <dimen name="subtitle_text_size">14sp</dimen>
-    <dimen name="padding_card_bottom">16dp</dimen>
+    <dimen name="channel_element_web_view_text_size">8sp</dimen>
     <dimen name="date_text_size">12sp</dimen>
     <dimen name="card_corner_radius">2dp</dimen>
     <dimen name="toolbar_height">56dp</dimen>
@@ -16,4 +17,5 @@
     <dimen name="image_channel_width">80dp</dimen>
     <dimen name="empty_text_size">30sp</dimen>
     <dimen name="dialog_padding">10dp</dimen>
+
 </resources>
