<feature> add runtime theme change

--- a/app/src/main/res/layout/activity_channel_item.xml
+++ b/app/src/main/res/layout/activity_channel_item.xml
@@ -16,7 +16,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activity_channel_item_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/toolbar_height">
+            android:layout_height="wrap_content">
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
