<feature> replacement of activities with fragments

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -21,7 +21,7 @@
         <item>Тёмная</item>
     </string-array>
     <string-array name="theme_entries_values">
-        <item>R.style.AppTheme</item>
-        <item>R.style.AppTheme.Dark</item>
+        <item>AppTheme</item>
+        <item>AppTheme.Dark</item>
     </string-array>
 </resources>
